// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div>
  <div
    class="sc-dnqmqq hHLyWY"
  >
    <button
      class="sc-bxivhb jBRBGM"
      size="2"
      type="button"
    />
  </div>
</div>
`;

exports[`renders dropdown 1`] = `
<div>
  <div
    class="sc-dnqmqq hHLyWY"
  >
    <button
      class="sc-bxivhb jBRBGM"
      size="2"
      type="button"
    >
      <p
        class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
      >
        Example
      </p>
    </button>
    <ul
      class="sc-iwsKbI kAYjpE"
      data-testid="dropdown"
    />
  </div>
</div>
`;
